--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "firebase": "6.0.2",
     "font-awesome": "^4.7.0",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
