--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "workbox-range-requests": "^5.1.3",
     "workbox-routing": "^5.1.3",
     "workbox-strategies": "^5.1.3",
-    "workbox-streams": "^5.1.3"
+    "workbox-streams": "^5.1.3",
+    "react-redux": "7.0.3",
+    "redux": "4.0.1",
+    "redux-logger": "3.0.6",
+    "reselect": "4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
