--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-redux": "7.0.3",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
-    "reselect": "4.0.0"
+    "reselect": "4.0.0",
+    "react-stripe-checkout": "2.6.3",
+    "redux-persist": "5.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
