--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@testing-library/user-event": "^12.1.10",
     "firebase": "6.0.2",
     "font-awesome": "^4.7.0",
-    "node-sass": "^6.0.1",
+    "node-sass": "4.12.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "7.0.3",
-    "react-router-dom": "^5.3.0",
+    "react-redux": "^7.0.3",
+    "react-router-dom": "5.0.0",
     "react-scripts": "4.0.3",
     "react-stripe-checkout": "2.6.3",
     "redux": "4.0.1",
