--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
     "redux-persist": "5.10.0",
-    "reselect": "4.0.0"
+    "reselect": "4.0.0",
+    "style-component": "^0.0.1"
   },
   "devDependencies": {
     "react-scripts": "3.0.0"
