--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "redux-logger": "3.0.6",
     "redux-persist": "5.10.0",
     "reselect": "4.0.0",
-    "style-component": "^0.0.1"
+    "styled-component": "^2.8.0"
   },
   "devDependencies": {
     "react-scripts": "3.0.0"
