--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
     "redux-persist": "5.10.0",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.0",
     "reselect": "4.0.0",
     "styled-components": "^5.3.3"
